--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -7,7 +7,7 @@
 <body>
   <div class="container">
     <div class="">
-      <h3 class="text-center">CI / CD 게시판 목록</h3>
+      <h3 class="text-center">CI / CD 게시판 목록 수정</h3>
       <a href="/board/detail" class="btn btn-sm btn-danger">상세보기</a>
       <a href="/board/detail" class="btn btn-sm btn-success">글 작성</a>
     </div>
