--- a/src/main/resources/templates/tour/find.html
+++ b/src/main/resources/templates/tour/find.html
@@ -8,6 +8,8 @@
   <div class="container">
     <div class="row">
       <h3 class="text-center">관광지 검색</h3>
+      <input type="text" class="input-sm" size="20" />
+      <button class="btn-sm btn-secondary">검색</button>
     </div>
   </div>  
 </body>
